Dette er en test-endring

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     </head>
     <body>
         
+        <div id="top-bar">
+            
+        </div>
+
+        <input type="number" id="input-box"></input>
+
         <script src="main.js" async defer></script>
     </body>
 </html>
